--- a/src/app/productos/pages/agregar/agregar.component.html
+++ b/src/app/productos/pages/agregar/agregar.component.html
@@ -12,9 +12,10 @@
                     type="text">
         </div>
         <div class="col-auto">
-            <span class="form-text"
-                    *ngIf="tieneErrores('nombre')">
-                Este campo es requerido
+            <span   error-msg
+                    [mensaje]="texto1"
+                    [color]="color"
+                    [valido]="!tieneErrores('nombre')">   
             </span>
         </div>
 
@@ -22,8 +23,16 @@
 
     <div class="row mt-3">
         <div class="col">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary"
+                    (click)="cambiarNombre()">
                 Guardar
+            </button>
+
+            &nbsp;
+
+            <button class="btn btn-primary"
+                    (click)="cambiarColor()">
+                Cambiar Color
             </button>
         </div>
     </div>
@@ -32,3 +41,12 @@
 <h3 class="mt-5"> Formulario </h3>
 <pre>Value: {{ miFormulario.value | json }}</pre>
 <pre>Valid: {{ miFormulario.valid }}</pre>
+
+<div class="row mt-5" 
+    *customIf="miFormulario.valid">
+    <div class="col">
+        <div class="alert alert-primary">
+            Todo OK!
+        </div>
+    </div>
+</div>
